add list merchandise type, fix acceptMerchandiseRequest
